overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,19 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+/* hard reset */
+* { 
+    -moz-box-sizing: border-box; 
+    -webkit-box-sizing: border-box; 
+    box-sizing: border-box;
+    position: relative;
+    padding: 0; margin: 0;
+} 
+
+html {
+    width: 100%; /* 01 */
+    /* tells html to go ahead and feel free to be 100% width */
+}
 /* MAIN-CONTAINER STYLES */
 
 .main-container {
